# GatorTools

./: .gitignore  GatorDaqProc.py  GatorUtils.py  README.md  SyncDaqFiles.py  pyproject.toml
GatorTools/: GatorDaqProc.py  GatorUtils.py  __init__.py
GatorTools/processor/data_managers/: GatorDatasetsProcessor.py  GatorDatasetsStorage.py
GatorTools/processor/wfs_processors/: GatorBslnSubtraction.py  GatorRawPurProc.py  GatorWfsProc.py  TrapezoidProc.py
GatorTools/processor/wfs_utils/: GatorWfsLibs.py  __init__.py
examples/: GatorDaqProc.json  GatorDaqSync.json  GatorLiveSpect.json
processor/: __init__.py
processor/data_managers/: GatorDatasetsProcessor.py  GatorDatasetsStorage.py  GatorFileProcessor.py  GatorRawFileHandler.py  __init__.py
processor/wfs_processors/: GatorRawWfsProc.py  GatorWfsProc.py  TrapezoidProc.py  WfsGaussianFilters.py  __init__.py
processor/wfs_utils/: GatorWfsLibs.py  __init__.py
scripts/: EnsureDaqSync.sh  EnsureGatorLiveSpectra.sh  EnsureTrigMonitoring.sh  gator_daq_sync.py  gator_live_spectra.py  process_gator_trigrate.py
